tests/invalid/trait/assoc_missing.facet
trait Iterator {
  type Item;
}

struct Counter {
  value: unrestricted isize
}

impl Iterator for unrestricted Counter {}

fn main() -> unrestricted () {
  ()
}
